# hermes-bridge

./: .gitignore  BIDIRECTIONAL_CHANNEL_REQUIREMENTS_v2.1.md  BUILD_NOTES.md  BUILD_STATUS.md  CMakeLists.txt  DEBUG_FILE_CALLBACK.md  DEBUG_OLLAMA.md  DEBUG_REPORT.md  DESIGN.md  DESIGN_BIDIRECTIONAL_v2.1.md  MODIFICATION_PROPOSAL.md  PLAN.md  PLAN_BIDIRECTIONAL_v2.1.md  PLAN_CALLBACK.md  PM_REVIEW.md  PROJECT_STATUS.md  README.md  REMAINING_ISSUES.md  REVERSE_CHANNEL_REQUIREMENTS.md  REVIEW_CALLBACK.md  REVIEW_FILE_CALLBACK.md  REVIEW_REPORT.md  REVIEW_REPORT_V3.md  SECURITY_REVIEW_CALLBACK.md  SECURITY_REVIEW_REPORT.md  SHELL_CHARS_FIX.md  SPEC.md  SPEC_CALLBACK.md  TEST_REPORT.md  TEST_REPORT_V2.md  V4_FIX_RESULT.md  VERIFICATION_FINAL.md  VERIFICATION_REPORT.md  VERIFICATION_V4_FIX.md  build.bat  build_v2.bat  commit_msg.txt  diag.ps1  diag2.ps1  hermes_bridge.json  (+11 more)
include/: RotatingFileLogger.h
src/: CallbackClient.cpp  CallbackClient.h  CallbackWriter.cpp  CallbackWriter.h  CommandQueue.cpp  CommandQueue.h  Config.cpp  Config.h  FileMonitor.cpp  FileMonitor.h  HttpServer.cpp  HttpServer.h  Logger.cpp  Logger.h  ResultWriter.cpp  ResultWriter.h  StateFile.cpp  StateFile.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/handlers/: ExecHandler.cpp  ExecHandler.h  FileHandler.cpp  FileHandler.h  HttpHandler.cpp  HttpHandler.h  IHandler.cpp  IHandler.h  OllamaHandler.cpp  OllamaHandler.h  ProcessHandler.cpp  ProcessHandler.h  ServiceHandler.cpp  ServiceHandler.h  TcpProxyHandler.cpp  TcpProxyHandler.h
